Added PUT and DELETE methods to all endpoints
